cluster/apps/mobivey/frontend/fe-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: mobivey
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: image-pull-creds
      containers:
        - name: frontend
          image: ghcr.io/svken/wegetagebuch:20250112140008
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 300Mi
              ephemeral-storage: 1Gi
            requests:
              cpu: 50m
              memory: 100Mi
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
