cluster/apps/mobivey/frontend/fe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobivey-fe
  namespace: mobivey
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
